--- a/portal/locale/en_AU/LC_MESSAGES/portal.po
+++ b/portal/locale/en_AU/LC_MESSAGES/portal.po
@@ -9,11 +9,11 @@ msgstr ""
 msgid "Cell"
 msgstr "Mobile"
 
-# app_text - UCSF Medical Center organization consent URL
+# app_text - UCSF Medical Center organization consent URL | IRONMAN organization consent URL
 msgid "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668"
 msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668&languageId=en_AU"
 
-# app_text - UW Medicine (University of Washington) organization consent URL
+# app_text - UW Medicine (University of Washington) organization consent URL | Australian Urology Associates organization consent URL
 msgid "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651"
 msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651&languageId=en_AU"
 
