--- a/portal/translations/en_AU/LC_MESSAGES/messages.po
+++ b/portal/translations/en_AU/LC_MESSAGES/messages.po
@@ -1,11 +1,19 @@
-# 
+# English (Australia) translations for TrueNTH.
+# Copyright (C) 2016 UW CIRG
+# This file is distributed under the same license as the TrueNTH project.
+#
 msgid ""
 msgstr ""
+"POT-Creation-Date: 2016-11-16 12:40-0800\n"
+"PO-Revision-Date: 2016-11-16 12:44-0800\n"
+"Language: en_AU\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Generated-By: Babel 2.3.4\n"
 
-# portal.templates.profile_macros.html portal.templates.profile_test.html
+#: templates/profile_macros.html templates/profile_test.html
 msgid "Cell"
 msgstr "Mobile"
 
