--- a/portal/translations/en_AU/LC_MESSAGES/messages.po
+++ b/portal/translations/en_AU/LC_MESSAGES/messages.po
@@ -13,15 +13,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.3.4\n"
 
-# portal/templates/profile_macros.html portal/templates/profile_test.html
-msgid "Cell"
-msgstr "Mobile"
-
-# app_text - UCSF Medical Center organization consent URL | IRONMAN organization consent URL
+# app_text - UCSF Medical Center organization consent URL | IRONMAN
+# organization consent URL
 msgid "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668"
 msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668&languageId=en_AU"
 
-# app_text - UW Medicine (University of Washington) organization consent URL | Australian Urology Associates organization consent URL
+# app_text - UW Medicine (University of Washington) organization consent URL |
+# Australian Urology Associates organization consent URL
 msgid "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651"
 msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651&languageId=en_AU"
 
@@ -40,3 +38,8 @@ msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&arti
 # app_text - Legal URL
 msgid "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41577"
 msgstr "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41577&languageId=en_AU"
+
+#: templates/profile_macros.html:319 templates/profile_test.html:107
+msgid "Cell"
+msgstr "Mobile"
+
