add i18next config js file, allow options for i18next configuration

--- a/portal/static/files/locales/en-AU/translation.json
+++ b/portal/static/files/locales/en-AU/translation.json
@@ -1,8 +1,4 @@
 {
-  "Error occurred updating user organization.": "",
-  "Decision Support": "",
-  "Symptom Tracker": "",
-  "Edit in Liferay": "",
   "No affiliated clinic": "",
   "No clinic selected": "",
   "Consent Status": "",
@@ -83,11 +79,13 @@
   "Server error occurred retrieving tou url.": "",
   "Server error occurred retrieving tou data.": "",
   "Server error occurred saving terms of use information.": "",
+  "Not provided": "",
   "All fields must be complete.": "",
   "Please enter a valid date.": "",
   "Please enter a valid month.": "",
   "Please enter a valid year.": "",
   "This e-mail address is already in use. Please enter a different address.": "",
+  "Please remove invalid characters and try again.": "",
   "Sorry, this isn't a valid date. Please try again.": "",
   "This isn't a valid e-mail address, please double-check.": "",
   "Invalid date. Please try again.": "",
