clean up gulp file, add additional tasks necessary for translation,

--- a/portal/translations/js/src/translation.json
+++ b/portal/translations/js/src/translation.json
@@ -1,4 +1,8 @@
 {
+  "Error occurred updating user organization.": "",
+  "Decision Support": "",
+  "Symptom Tracker": "",
+  "Edit in Liferay": "",
   "No affiliated clinic": "",
   "No clinic selected": "",
   "Consent Status": "",
@@ -49,6 +53,7 @@
   "Consent to share information": "",
   "I consent to sharing information with the ": "",
   "Cannot ununcheck.  A staff member must be associated with an organization": "",
+  "Not provided": "",
   "no data returned": "",
   "unable to get needed core data": "",
   "unable to get required core data": "",
@@ -71,6 +76,7 @@
   "Error retrieving data from server": "",
   "Server error occurred saving procedure/treatment information.": "",
   "Server error occurred removing procedure/treatment information.": "",
+  "Server error occurred retrieving roles information.": "",
   "Server error occurred retrieving user role information.": "",
   "Server error occurred setting user role information.": "",
   "Server error occurred deleting user role.": "",
@@ -79,7 +85,6 @@
   "Server error occurred retrieving tou url.": "",
   "Server error occurred retrieving tou data.": "",
   "Server error occurred saving terms of use information.": "",
-  "Not provided": "",
   "All fields must be complete.": "",
   "Please enter a valid date.": "",
   "Please enter a valid month.": "",
