add missing tags, update translation json/pot files

--- a/portal/translations/js/src/translation.json
+++ b/portal/translations/js/src/translation.json
@@ -14,15 +14,14 @@
   "Agreed to terms": "",
   "TrueNTH USA Terms of Use": "",
   "View": "",
-  "deleted on": "",
-  "expired": "",
   "Consented": "",
   "Consented / Enrolled": "",
-  "Suspend Data Collection and Report Historic Data": "",
-  "Purged/Removed": "",
+  "Withdrawn - Suspend Data Collection and Report Historic Data": "",
+  "Purged / Removed": "",
+  "deleted on": "",
+  "expired": "",
   "Consent Status Editor": "",
   "Modify the consent status for this user to:": "",
-  "Purged/remove consent(s) associated with this organization": "",
   "Close": "",
   "Consent Date Editor": "",
   "Modify the consent date": "",
