add missing tags, rename gulp file, remove unneeded scripts

--- a/portal/static/files/locales/en-US/translation.json
+++ b/portal/static/files/locales/en-US/translation.json
@@ -1,95 +1,9 @@
 {
-  "No affiliated clinic": "",
-  "No clinic selected": "",
-  "Consent Status": "",
-  "Status": "",
-  "Agreement": "",
-  "Consent Date": "",
-  "Regiatration Date": "",
-  "GMT": "",
-  "Agreed to terms": "",
-  "TrueNTH USA Terms of Use": "",
-  "View": "",
-  "deleted on": "",
-  "expired": "",
-  "Consented": "",
-  "Consented / Enrolled": "",
-  "Suspend Data Collection and Report Historic Data": "",
-  "Purged/Removed": "",
-  "Consent Status Editor": "",
-  "Modify the consent status for this user to:": "",
-  "Purged/remove consent(s) associated with this organization": "",
-  "Close": "Close",
-  "Consent Date Editor": "",
-  "Modify the consent date": "",
-  "(GMT 24-hour format)": "",
-  "for this agreement to:": "",
-  "Submit": "",
-  "No Consent Record Found": "",
-  "Date must in the valid format.": "",
-  "Hour must be in valid format, range 0 to 23.": "",
-  "Minute must be in valid format, range 0 to 59.": "",
-  "Second must be in valid format, range 0 to 59.": "",
-  "Error processing data.  Make sure the date is in the correct format.": "",
-  "You must enter a valid date/time": "",
-  "No consent found for this user.": "",
-  "You do not have permission to edit this patient record.": "",
-  "You haven't entered any management option yet.": "",
-  "you": "",
-  "Are you sure you want to delete this treatment?": "",
-  "Yes": "",
-  "No": "",
-  "Delete": "",
-  "this patient": "",
-  "staff member": "",
-  "data entered by ": "",
-  " on ": "",
-  "Added": "",
-  "You must agree to the terms and conditions by checking the provided checkboxes.": "",
-  "Consent to share information": "",
-  "I consent to sharing information with the ": "",
-  "Cannot ununcheck.  A staff member must be associated with an organization": "",
-  "no data returned": "",
-  "unable to get needed core data": "",
-  "unable to get required core data": "",
-  "No information available": "",
-  "no data found": "",
-  "User Id is required": "",
-  "No data found": "",
-  "Unable to retrieve portal footer html": "",
-  "Server error occurred retrieving organization/clinic information.": "",
-  "Problem retrieving data from server.": "",
-  "Error Status Code: ": "",
-  "Permission denied to access patient record": "",
-  "Server error occurred retrieving consent information.": "",
-  "Server error occurred setting consent status.": "",
-  "Unable to set default consent agreement": "",
-  "Server error occurred removing consent: ": "",
-  "Server error occurred retrieving demographics information.": "",
-  "Server error occurred setting demographics information.": "",
-  "Server error occurred retrieving locale information.": "",
-  "Error retrieving data from server": "",
-  "Server error occurred saving procedure/treatment information.": "",
-  "Server error occurred removing procedure/treatment information.": "",
-  "Server error occurred retrieving user role information.": "",
-  "Server error occurred setting user role information.": "",
-  "Server error occurred deleting user role.": "",
-  "Server error occurred retrieving clinical data.": "",
-  "Server error occurred updating clinical data.": "",
-  "Server error occurred retrieving tou url.": "",
-  "Server error occurred retrieving tou data.": "",
-  "Server error occurred saving terms of use information.": "",
-  "Not provided": "",
-  "All fields must be complete.": "",
-  "Please enter a valid date.": "",
-  "Please enter a valid month.": "",
-  "Please enter a valid year.": "",
-  "This e-mail address is already in use. Please enter a different address.": "",
-  "Please remove invalid characters and try again.": "",
-  "Sorry, this isn't a valid date. Please try again.": "",
-  "This isn't a valid e-mail address, please double-check.": "",
-  "Invalid date. Please try again.": "",
-  "Date must not be in the future. Please try again.": "",
-  "Date must not be before 1900. Please try again.": "",
-  "Error occurred when converting timezone: ": ""
+    "Cell": "Cell",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52668&languageId=en_US",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset/detailed?groupId=20147&articleId=52651&languageId=en_US",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41603": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41603&languageId=en_US",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41549": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41549&languageId=en_US",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41565": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41565&languageId=en_US",
+    "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41577": "https://stg-lr7.us.truenth.org/c/portal/truenth/asset?groupId=20147&articleId=41577&languageId=en_US"
 }
