--- a/portal/translations/js/src/translation.json
+++ b/portal/translations/js/src/translation.json
@@ -5,6 +5,7 @@
   "Edit in Liferay": "",
   "No affiliated clinic": "",
   "No clinic selected": "",
+  "Patient has deceased": "",
   "Consent Status": "",
   "Status": "",
   "Agreement": "",
@@ -28,6 +29,7 @@
   "(GMT 24-hour format)": "",
   "for this agreement to:": "",
   "Submit": "",
+  "Sharing information with clinics ": "",
   "No Consent Record Found": "",
   "Date must in the valid format.": "",
   "Hour must be in valid format, range 0 to 23.": "",
@@ -68,7 +70,6 @@
   "Server error occurred retrieving consent information.": "",
   "Server error occurred setting consent status.": "",
   "Unable to set default consent agreement": "",
-  "Server error occurred removing consent: ": "",
   "Server error occurred retrieving demographics information.": "",
   "Server error occurred setting demographics information.": "",
   "Server error occurred retrieving locale information.": "",
@@ -81,7 +82,10 @@
   "Server error occurred deleting user role.": "",
   "Server error occurred retrieving clinical data.": "",
   "Server error occurred updating clinical data.": "",
+  "no url returned": "",
   "Server error occurred retrieving tou url.": "",
+  "Server error": "",
+  "error retrieving instruments list": "",
   "Server error occurred retrieving tou data.": "",
   "Server error occurred saving terms of use information.": "",
   "All fields must be complete.": "",
@@ -95,5 +99,6 @@
   "Invalid date. Please try again.": "",
   "Date must not be in the future. Please try again.": "",
   "Date must not be before 1900. Please try again.": "",
+  "Date/time zone conversion is not supported in current browser. All date/time fields are converted to local time zone instead.": "",
   "Error occurred when converting timezone: ": ""
 }
