fix code for translating po to json for each locale, re-run gulp

--- a/portal/translations/js/src/translation.json
+++ b/portal/translations/js/src/translation.json
@@ -1,4 +1,5 @@
 {
+  "Error retrieving demographics information for user.": "",
   "Error occurred updating user organization.": "",
   "Decision Support": "",
   "Symptom Tracker": "",
