remove unwanted tasks from gulp file, fix i18next tags, add missing ones

--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -1,17 +1,24 @@
 {
+  "Select All": "",
+  "Clear All": "",
+  "Close": "",
+  "Error occurred retrieving data from server.": "",
+  "Please choose at least one instrument.": "",
+  "Please choose one download type.": "",
   "Error retrieving demographics information for user.": "",
   "Error occurred updating user organization.": "",
+  "Error updating organization": "",
   "Decision Support": "",
   "Symptom Tracker": "",
   "Edit in Liferay": "",
   "No affiliated clinic": "",
   "No clinic selected": "",
-  "Patient has deceased": "",
+  "Patient is deceased": "",
   "Consent Status": "",
   "Status": "",
   "Agreement": "",
   "Consent Date": "",
-  "Regiatration Date": "",
+  "Registration Date": "",
   "GMT": "",
   "Agreed to terms": "",
   "TrueNTH USA Terms of Use": "",
@@ -23,8 +30,7 @@
   "deleted on": "",
   "expired": "",
   "Consent Status Editor": "",
-  "Modify the consent status for this user to:": "",
-  "Close": "",
+  "Modify the consent status for this user to": "",
   "Consent Date Editor": "",
   "Modify the consent date": "",
   "(GMT 24-hour format)": "",
@@ -53,7 +59,7 @@
   "Added": "",
   "You must agree to the terms and conditions by checking the provided checkboxes.": "",
   "Consent to share information": "",
-  "I consent to sharing information with the ": "",
+  "I consent to sharing information with": "",
   "Cannot ununcheck.  A staff member must be associated with an organization": "",
   "Not provided": "",
   "no data returned": "",
@@ -71,6 +77,7 @@
   "Server error occurred retrieving consent information.": "",
   "Server error occurred setting consent status.": "",
   "Unable to set default consent agreement": "",
+  "Server error occurred removing consent.": "",
   "Server error occurred retrieving demographics information.": "",
   "Server error occurred setting demographics information.": "",
   "Server error occurred retrieving locale information.": "",
@@ -89,6 +96,7 @@
   "error retrieving instruments list": "",
   "Server error occurred retrieving tou data.": "",
   "Server error occurred saving terms of use information.": "",
+  "not provided": "",
   "All fields must be complete.": "",
   "Please enter a valid date.": "",
   "Please enter a valid month.": "",
