add versions to i18next source, remove i18next tag from name, re-run extraction

--- a/portal/translations/js/src/frontend.json
+++ b/portal/translations/js/src/frontend.json
@@ -17,7 +17,7 @@
   "Consent Status": "",
   "Status": "",
   "Agreement": "",
-  "Consent Date": "",
+  "Date": "",
   "Registration Date": "",
   "GMT": "",
   "Agreed to terms": "",
